# CG2021-HW3

./: .gitattributes  .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build.yml
assets/shader/: calculatenormal.frag  calculatenormal.vert  fresnel.frag  fresnel.vert  normalmap.frag  normalmap.vert  part1.frag  part1.vert  skybox.frag  skybox.vert
include/: context_manager.h  graphics.h  mesh.h
include/buffer/: buffer.h  vertexarray.h
include/camera/: camera.h  quat_camera.h
include/light/: directionallight.h  light.h  pointlight.h  spotlight.h
include/shader/: program.h  shader.h
include/shape/: cube.h  plane.h  shape.h  sphere.h
include/texture/: cubemap.h  framebuffertexture.h  shadow.h  texture.h  texture2d.h
script/: homework.patch  pack.ps1  pack.sh  release.sh
src/: CMakeLists.txt  context_manager.cpp  main.cpp
src/buffer/: buffer.cpp  vertexarray.cpp
src/camera/: camera.cpp  quat_camera.cpp
src/light/: directionallight.cpp  pointlight.cpp  spotlight.cpp
src/shader/: program.cpp  shader.cpp
src/shape/: cube.cpp  plane.cpp  sphere.cpp
src/texture/: cubemap.cpp  framebuffertexture.cpp  shadow.cpp  texture.cpp  texture2d.cpp
vs2019/: HW3.sln
vs2019/HW3/: HW3.vcxproj  HW3.vcxproj.filters
vs2019/glfw/: glfw.vcxproj  glfw.vcxproj.filters
